New code - workshop 01
Signed-off-by: Andrei Tatarnikov <andrewt0301@gmail.com>

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -8,3 +8,7 @@ endif(NOT CMAKE_BUILD_TYPE)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(types tutorial01/types.cpp)
+add_executable(workshop01 workshop01/workshop01.cpp
+                          workshop01/Multiplicator.cpp
+                          workshop01/Random.cpp
+                          workshop01/Number.cpp)
