--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -7,7 +7,7 @@ endif(NOT CMAKE_BUILD_TYPE)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(types tutorial01/types.cpp workshops/workshop10/workshop10.cpp)
+add_executable(types tutorial01/types.cpp)
 
 add_executable(
         workshop01
